Fix policies alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1528,6 +1528,35 @@ textarea.form-control {
     padding-right: 3rem !important;
     padding-left: 3rem !important; } }
 
+#policies .row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#policies .col-md-4 {
+  display: flex;
+}
+
+#policies .block-7 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100%;
+}
+
+#policies .block-7 .text-center {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+#policies .block-7 .p-4 {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 #policies .block-7 .p-4.px-lg-5 {
   padding-left: 1.5rem !important;
   padding-right: 1.5rem !important;
